--- a/src/app/leyes/anexo11/anexo11.component.html
+++ b/src/app/leyes/anexo11/anexo11.component.html
@@ -3,15 +3,14 @@
     <br>
     <hr style="height:3px; color: black; background-color: red;" />
     <div id="cabezaLey">
-
         <p id="titulo1">PODER EJECUTIVO</p>
         <p id="titulo1">SECRETARIA DE HACIENDA Y CREDITO PUBLICO</p>
         <p id="titulo2"> ANEXO 11 de las Reglas Generales de Comercio Exterior para 2024</p>
         <p id="titulo2">Rutas fiscales autorizadas para efectuar el tránsito internacional de mercancías desde Ensenada
             o
-            Guaymas a los Estados Unidos de América
+             a los Estados Unidos de América
         </p>
-
+Guaymas
 
 
         <p>Para los efectos del artículo 131, fracción III de la Ley, en relación con la regla 4.6.23., se dan a conocer
