--- a/src/app/leyes/anexo16/anexo16.component.html
+++ b/src/app/leyes/anexo16/anexo16.component.html
@@ -1,1 +1,859 @@
-<p>anexo16 works!</p>
+<div class="zona1">
+    
+ <br>
+ <hr style="height:3px; color: black; background-color: red;" />
+ <div id="cabezaLey">
+    
+     <p id="titulo1">PODER EJECUTIVO</p>
+     <p id="titulo1">SECRETARIA DE HACIENDA Y CREDITO PUBLICO</p>
+     <p id="titulo2"> ANEXO 16 de las Reglas Generales de Comercio Exterior para 2024</p>
+     <p id="titulo2" >Aduanas autorizadas para tramitar el despacho aduanero de mercancías que inicien el tránsito
+         internacional en la frontera norte y lo terminen en la frontera sur del país o viceversa, así como las
+         rutas fiscales autorizadas para tal efecto
+     </p>
+     
+
+
+<p>Para los efectos del artículo 131, fracción III de la Ley, en relación con la regla 4.6.20., se dan a conocer
+ las aduanas autorizadas para tramitar el despacho de mercancías por las que se inicie el tránsito internacional
+ en la frontera norte y se concluya en la frontera sur del país o viceversa, así como las rutas fiscales
+ autorizadas para tal efecto, conforme a lo siguiente:</p>
+
+
+ 
+
+ </div>
+
+
+<ol type="I">
+<li>Aduanas autorizadas para tramitar el despacho aduanero de mercancías en tránsito internacional:
+</li>
+<ol type="a">
+<li>Aduana: de Colombia, de Ciudad Reynosa, de Ojinaga, de Matamoros, únicamente por la
+ sección aduanera de Lucio Blanco-Los Indios, de Subteniente López y de Ciudad Hidalgo.</li>
+</ol>
+
+
+<li>Rutas fiscales autorizadas para el tránsito internacional por territorio nacional:</li>
+<ol type="a">
+<li>Ruta fiscal por la que los transportistas deberán efectuar su recorrido desde la aduana de
+ Ciudad Reynosa o de Matamoros (sección aduanera de Lucio Blanco-Los Indios):</li>
+ <br>
+<ol type="1">
+
+<li>De Ciudad Reynosa o de Matamoros, únicamente por la sección aduanera de Lucio
+ Blanco-Los Indios a San Fernando, Tamaulipas:</li>
+
+<table>
+
+    <tr>
+            
+        <td  width="20%">De San Fernando, Tamaulipas.</td>
+        <td width="40%">a</td>
+        <td width="40%">Los Rayones, Tamaulipas.</td>
+     </tr>
+
+
+<tr>
+<td>De Los Rayones, Tamaulipas.</td>
+<td>a
+</td>
+<td>Santander Jiménez,
+ Tamaulipas.</td>
+</tr>
+
+
+
+<tr>
+<td>De Santander Jiménez,
+ Tamaulipas.</td>
+<td>a</td>
+<td>Güemez, Tamaulipas.</td>
+</tr>
+
+<tr>
+<td>De Güemez, Tamaulipas. </td>
+<td>a</td>
+<td>Ciudad Victoria, Tamaulipas</td>
+</tr>
+
+
+<tr>
+<td>De Ciudad Victoria, Tamaulipas</td>
+<td>a</td>
+<td>Zaragoza, Tamaulipas.</td>
+</tr>
+
+<tr>
+<td>De Zaragoza, Tamaulipas.</td>
+<td>a</td>
+<td>Estación Manuel, Tamaulipas.
+</td>
+</tr>
+
+
+<tr>
+<td>De Estación Manuel, Tamaulipas</td>
+<td>a</td>
+<td>Tampico, Tamaulipas</td>
+</tr>
+
+<tr>
+<td>De Tampico, Tamaulipas. </td>
+<td>a</td>
+<td>Pueblo Viejo, Veracruz</td>
+</tr>
+
+
+<tr>
+<td>De Pueblo Viejo, Veracruz</td>
+<td>a</td>
+<td>Ciudad Cuauhtémoc,
+ Veracruz</td>
+</tr>
+
+<tr>
+<td>De Ciudad Cuauhtémoc, Veracruz</td>
+<td>a</td>
+<td>Tampico Alto, Veracruz</td>
+</tr>
+
+
+<tr>
+<td>De Tampico Alto, Veracruz</td>
+<td>a</td>
+<td>Ozuluama, Veracruz</td>
+</tr>
+
+
+
+
+<tr>
+<td>De Ozuluama, Veracruz.</td>
+<td>a</td>
+<td>Naranjos, Veracruz</td>
+</tr>
+
+<tr>
+<td>De Naranjos, Veracru</td>
+<td>a</td>
+<td>Potrero del Llano, Veracruz.</td>
+</tr>
+
+
+<tr>
+<td>De Potrero del Llano, Veracruz.</td>
+<td>a</td>
+<td>Álamo, Veracruz</td>
+</tr>
+
+<tr>
+<td>De Álamo, Veracruz. </td>
+<td>a</td>
+<td>Tihuatlán, Veracruz</td>
+</tr>
+
+
+<tr>
+<td>De Tihuatlán, Veracruz</td>
+<td>a</td>
+<td>Gutiérrez Zamora, Veracruz.</td>
+</tr>
+
+<tr>
+<td>De Gutiérrez Zamora, Veracruz</td>
+<td>a</td>
+<td>Nautla, Veracruz</td>
+</tr>
+
+
+<tr>
+<td>De Nautla, Veracruz. </td>
+<td>a</td>
+<td>Palma Sola, Veracruz.
+</td>
+</tr>
+
+<tr>
+<td>De Palma Sola, Veracruz. </td>
+<td>a</td>
+<td>Cardel, Veracruz.</td>
+</tr>
+
+
+
+<tr>
+<td>De Cardel, Veracruz</td>
+<td>a</td>
+<td>Pte. Santa Fe San Julián,Veracruz. </td>
+</tr>
+
+<tr>
+<td>De Pte. Santa Fe San Julián,
+ Veracruz</td>
+<td>a</td>
+<td>Paso del Toro, Veracruz.</td>
+</tr>
+
+
+</table>
+<br>
+
+<li>Tratándose de transportistas que se dirijan a Guatemala, a partir del Paso del Toro,
+ deberán seguir la siguiente ruta:</li>
+<table>
+
+<tr>
+         
+ <td  width="20%">De Paso del Toro, Veracruz</td>
+ <td width="50%">a</td>
+ <td width="30%">La Tinaja, Veracruz.</td>
+</tr>
+
+<tr>
+<td>De La Tinaja, Veracruz.</td>
+<td>a</td>
+<td>Tierra Blanca, Veracruz.</td>
+
+</tr>
+
+<tr>
+<td>De Tierra Blanca, Veracruz.</td>
+<td>a</td>
+<td>Alemán, Veracruz.</td>
+</tr>
+
+
+<tr>
+<td>De Alemán, Veracruz</td>
+<td>a</td>
+<td>Sayula, Veracruz.</td>
+</tr>
+
+
+<tr>
+<td>De Sayula, Veracruz.</td>
+<td>a</td>
+<td>Palomares, Oaxaca.</td>
+</tr>
+
+
+<tr>
+<td>De Palomares, Oaxaca.</td>
+<td>a</td>
+<td>Matías Romero, Oaxaca.
+</td>
+</tr>
+
+
+<tr>
+<td>De Matías Romero, Oaxaca.</td>
+<td>a</td>
+<td>La Ventosa, Oaxaca.</td>
+</tr>
+
+
+<tr>
+<td>De La Ventosa, Oaxaca.</td>
+<td>a</td>
+<td>Tapanatepec, Oaxaca.
+</td>
+</tr>
+
+
+<tr>
+<td>De Tapanatepec, Oaxaca.</td>
+<td>a</td>
+<td>Arriaga, Chiapas.</td>
+</tr>
+
+
+<tr>
+<td>De Arriaga, Chiapas</td>
+<td>a</td>
+<td>Tonalá, Chiapas.</td>
+</tr>
+
+
+<tr>
+<td>De Tonalá, Chiapas.</td>
+<td>a</td>
+<td>Pijijiapan, Chiapas.</td>
+</tr>
+
+
+<tr>
+<td>De Pijijiapan, Chiapas.</td>
+<td>a</td>
+<td>Huixtla, Chiapas.
+</td>
+</tr>
+
+
+<tr>
+<td>De Huixtla, Chiapas.</td>
+<td>a</td>
+<td>Tapachula, Chiapas.</td>
+</tr>
+
+
+<tr>
+<td>De Tapachula, Chiapas.</td>
+<td>a</td>
+<td>Ciudad Hidalgo, Chiapas.</td>
+</tr>
+
+
+</table>
+<br>
+<li>Tratándose de transportistas que se dirijan a Belice, a partir del Paso del Toro,
+ deberán seguir la siguiente ruta:</li>
+<table>
+
+<tr>
+         
+ <td  width="20%">De Paso del Toro, Veracruz</td>
+ <td width="40%">a</td>
+ <td width="30%">Alvarado, Veracruz.
+ </td>
+</tr>
+
+<tr>
+
+<td>De Alvarado, Veracruz. </td>
+<td>a</td>
+<td>Tula, Veracruz.</td>
+
+
+</tr>
+
+<tr>
+
+<td>De Tula, Veracruz. </td>
+<td>a</td>
+<td>San Andrés, Veracruz.</td>
+
+
+</tr>
+
+<tr>
+
+<td>De San Andrés, Veracruz</td>
+<td>a</td>
+<td>Acayucan, Veracruz.
+</td>
+
+
+</tr>
+
+
+
+<tr>
+
+<td>De Acayucan, Veracruz. </td>
+<td>a</td>
+<td>Minatitlán, Veracruz</td>
+
+
+</tr>
+
+
+
+<tr>
+
+<td>De Minatitlán, Veracruz.</td>
+<td>a</td>
+<td>Coatzacoalcos, Veracruz.</td>
+
+
+</tr>
+
+
+<tr>
+
+<td>De Coatzacoalcos, Veracruz.</td>
+<td>a</td>
+<td>Cárdenas, Tabasco.</td>
+
+
+</tr>
+
+
+<tr>
+
+<td>De Cárdenas, Tabasco.</td>
+<td>a</td>
+<td>Villahermosa, Tabasco.</td>
+
+
+</tr>
+
+
+<tr>
+
+<td>De Villahermosa, Tabasco. </td>
+<td>a</td>
+<td>Escárcega, Campeche.
+</td>
+
+
+</tr>
+
+
+<tr>
+
+<td>De Escárcega, Campeche.</td>
+<td>a</td>
+<td>Subteniente López,
+ Quintana Roo</td>
+
+
+</tr>
+</table>
+
+<br>
+<p>Para efectuar el recorrido de Ciudad Reynosa o de Matamoros, únicamente por la sección
+ aduanera de Lucio Blanco-Los Indios a Ciudad Hidalgo, Chiapas, el transportista deberá
+ utilizar las carreteras federales 97, 101, 132, 180, 180D, 145, 147, 190 y 200.</p>
+
+<p>Para efectuar el recorrido de Ciudad Reynosa o de Matamoros, únicamente por la sección
+ aduanera de Lucio Blanco-Los Indios a Belice, el transportista deberá utilizar las carreteras
+ federales 97, 101, 132, 180, 180D y 186.</p>
+
+</ol>
+
+
+<li>Los transportistas provenientes de la aduana de Colombia, deberán utilizar la carretera
+ fronteriza número 2 hasta entroncar con la carretera federal 97 de Reynosa, debiendo
+ utilizar las carreteras señaladas en los dos últimos párrafos del inciso (a), de la presente
+ fracción, según corresponda:</li>
+
+<table>
+
+
+<tr>
+         
+ <td  width="20%">De Ojinaga, Chihuahua</td>
+ <td width="40%">a</td>
+ <td width="30%">Camargo, Chihuahua
+ </td>
+</tr>
+
+
+
+
+<tr>
+<td>De Camargo, Chihuahua.</td>
+<td>a</td>
+<td>Jiménez, Chihuahua.</td>
+</tr>
+
+
+<tr>
+<td>De Jiménez, Chihuahua</td>
+<td>a</td>
+<td>Entronque San Rafael, Durango.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque San Rafael, Durango.</td>
+<td>a</td>
+<td>Entronque Ceballos, Durango</td>
+</tr>
+
+<tr>
+<td>De Entronque Ceballos. Durango. </td>
+<td>a</td>
+<td>Cartagena, Durango.
+</td>
+</tr>
+
+
+<tr>
+<td>De Cartagena, Durango.</td>
+<td>a</td>
+<td>Bermejillo, Durango</td>
+</tr>
+
+
+<tr>
+<td>De Bermejillo, Durango.</td>
+<td>a</td>
+<td>Entronque El Vergel, Durango.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque El Vergel, Durango</td>
+<td>a</td>
+<td>Entronque Pedriceña, Durango.</td>
+</tr>
+
+<tr>
+<td>De Entronque Pedriceña, Durango</td>
+<td>a</td>
+<td>Entronque Cuencamé, Durango</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Cuencamé, Durango. </td>
+<td>a</td>
+<td>Entronque San Isidro, Zacatecas</td>
+</tr>
+
+
+<tr>
+<td>De Entronque San Isidro, Zacatecas</td>
+<td>a</td>
+<td>Libramiento de Fresnillo, Zacatecas.
+</td>
+</tr>
+
+
+<tr>
+<td>De Libramiento de Fresnillo, Zacatecas.</td>
+<td>a</td>
+<td>La Providencia, Zacatecas. </td>
+</tr>
+
+
+<tr>
+<td>De La Providencia, Zacatecas</td>
+<td>a</td>
+<td>Entronque Víctor Rosales,
+ Zacatecas</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Víctor Rosales, Zacatecas.</td>
+<td>a</td>
+<td>Libramiento de Víctor Rosales,
+ Zacatecas.</td>
+</tr>
+
+
+<tr>
+<td>De Libramiento de Víctor Rosales,
+ Zacatecas.
+ </td>
+<td>a</td>
+<td>Entronque Calera, Zacatecas.
+</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Calera, Zacatecas</td>
+<td>a</td>
+<td>Entronque Buena Vista, Querétaro.</td>
+</tr>
+
+
+
+<tr>
+<td>De Entronque Buena Vista, Querétaro.</td>
+<td>a</td>
+<td>Libramiento de Querétaro</td>
+</tr>
+
+
+<tr>
+<td>De Libramiento de Querétaro.</td>
+<td>a</td>
+<td> Entronque El Colorado, Querétaro</td>
+</tr>
+
+
+<tr>
+<td>De Entronque El Colorado, Querétaro.</td>
+<td>a</td>
+<td>Palmillas, Querétaro.</td>
+</tr>
+
+
+<tr>
+<td>De Palmillas, Querétaro</td>
+<td>a</td>
+<td>Entronque Jilotepec, México</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Jilotepec, México</td>
+<td>a</td>
+<td>Libramiento Norte de la Ciudad de
+ México (Entronque Jilotepec -
+ Entronque Autopista México
+ Puebla).</td>
+</tr>
+
+
+<tr>
+<td>De Libramiento Norte de la Ciudad de
+ México (Entronque Jilotepec - Entronque
+ Autopista México Puebla).</td>
+<td>a</td>
+<td>Entronque Libramiento Norte de la
+ Ciudad de México Entronque
+ Puebla.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Libramiento Norte de la
+ Ciudad de México Entronque Puebla.</td>
+<td>a</td>
+<td>Entronque Puebla</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Puebla.</td>
+<td>a</td>
+<td>Entronque Acatzingo, Puebla.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Acatzingo, Puebla.</td>
+<td>a</td>
+<td>Ciudad Mendoza, Veracruz.</td>
+</tr>
+
+
+<tr>
+<td>De Ciudad Mendoza, Veracruz.</td>
+<td>a</td>
+<td>Entronque la Luz, Veracruz.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque la Luz, Veracruz</td>
+<td>a</td>
+<td>Entronque Córdoba, Veracruz</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Córdoba, Veracruz.</td>
+<td>a</td>
+<td>Entronque La Tinaja, Veracruz</td>
+</tr>
+
+<tr>
+<td>De Entronque La Tinaja, Veracruz.</td>
+<td>a</td>
+<td>Entronque Isla, Veracruz.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Isla, Veracruz.</td>
+<td>a</td>
+<td>Cosoleacaque, Veracruz.</td>
+</tr>
+
+
+<tr>
+<td>De Cosoleacaque, Veracruz.</td>
+<td>a</td>
+<td>Entronque Minatitlán, Veracruz.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Minatitlán, Veracruz. </td>
+<td>a</td>
+<td>Nuevo Teapa, Veracruz.</td>
+</tr>
+
+</table>
+<br>
+<p>Tratándose de transportistas que se dirijan a Guatemala, deberán seguir la siguiente ruta a
+ partir de Nuevo Teapa:</p>
+<table>
+
+<tr>
+         
+ <td  width="20%"></td>
+ <td width="40%">a</td>
+ <td width="30%">
+ </td>
+</tr>
+
+
+
+<tr>
+<td>De Nuevo Teapa, Veracruz. </td>
+<td>a</td>
+<td>Entronque Las Choapas,
+ Veracruz.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Las Choapas, Veracruz</td>
+<td>a</td>
+<td>Entronque Nuevo Sacrificio,
+ Veracruz.
+ </td>
+</tr>
+
+
+<tr>
+<td>De Entronque Nuevo Sacrificio,
+ Veracruz.</td>
+<td>a</td>
+<td>Entronque Raudales, Chiapas</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Raudales, Chiapas</td>
+<td>a</td>
+<td>San Antonio, Chiapas.</td>
+</tr>
+
+<tr>
+<td>De San Antonio, Chiapas. </td>
+<td>a</td>
+<td>Entronque Ocozocuautla,
+ Chiapas.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Ocozocuautla, Chiapas. </td>
+<td>a</td>
+<td>Entronque Montes Azules,
+ Chiapas.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Montes Azules, Chiapas.</td>
+<td>a</td>
+<td>Entronque Jiquipilas, Chiapas</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Jiquipilas, Chiapas</td>
+<td>a</td>
+<td>Entronque Tierra y Libertad,
+ Chiapas.</td>
+</tr>
+
+<tr>
+<td>De Entronque Tierra y Libertad, Chiapas.</td>
+<td>a</td>
+<td>Entronque, Arriaga, Chiapas</td>
+</tr>
+
+
+<tr>
+<td>De Entronque Arriaga, Chiapas. </td>
+<td>a</td>
+<td>Ciudad Hidalgo, Chiapas</td>
+</tr>
+
+
+
+
+</table>
+<br>
+
+<li>Tratándose de transportistas que se dirijan a Subteniente López, deberán seguir la siguiente
+ ruta a partir de Nuevo Teapa:</li>
+
+<table>
+
+<tr>
+         
+ <td  width="20%">De Nuevo Teapa, Veracruz.</td>
+ <td width="50%">a</td>
+ <td width="30%">Entronque Agua Dulce, Veracruz</td>
+</tr>
+
+<tr>
+<td>De Entronque Agua Dulce, Veracruz.</td>
+<td>a</td>
+<td>Entronque Chontalpa, Tabasco.</td>
+</tr>
+
+<tr>
+<td>De Entronque Chontalpa, Tabasco. </td>
+<td>a</td>
+<td>Villahermosa, Tabasco.</td>
+</tr>
+
+<tr>
+<td>De Villahermosa, Tabasco.</td>
+<td>a</td>
+<td>Entronque El Barril, Tabasco.</td>
+</tr>
+
+
+<tr>
+<td>De Entronque El Barril, Tabasco.</td>
+<td>a</td>
+<td>Entronque Emiliano Zapata,
+ Chiapas.</td>
+</tr>
+
+
+
+<tr>
+<td>De Entronque Emiliano Zapata,
+ Chiapas.</td>
+<td>a</td>
+<td>San Marco, Campeche.</td>
+</tr>
+
+
+<tr>
+<td>De San Marco, Campeche.</td>
+<td>a</td>
+<td>Subteniente López, Quintana Roo.</td>
+</tr>
+
+
+
+
+</table>
+
+
+</ol>
+
+
+<p>Para efectuar el recorrido de Ojinaga a Ciudad Hidalgo, Chiapas, el transportista deberá
+ utilizar las carreteras federales 18, 45D, 49D, 49, 40D, 40, 57D, M40D, 150D, 145D, 180D,
+ 180, 190, 190D y 200.</p>
+<p>Para efectuar el recorrido de Ojinaga a Belice, el transportista deberá utilizar las carreteras
+ federales 18, 45D, 49D, 49, 40D, 40, 57D, M40D, 150D, 145D, 180D, 180 y 186.
+ </p>
+<p>Tratándose de transportistas que inicien el tránsito internacional por territorio nacional en las
+ aduanas de Ciudad Hidalgo o de Subteniente López, deberán seguir la ruta en orden
+ inverso al descrito.</p>
+
+
+</ol>
+<br>
+<p>Atentamente.</p>
+<p>Ciudad de México, a 15 de diciembre de 2023.- En suplencia por ausencia del Jefe del Servicio de
+ Administración Tributaria, con fundamento en el artículo 4, primer párrafo del Reglamento Interior del Servicio
+ de Administración Tributaria, firma el Administrador General Jurídico, Lic. Ricardo Carrasco Varona.-
+ Rúbrica</p>
+
+
+
+
+
+
+
+
+</div>
