--- a/src/app/leyes/anexo18/anexo18.component.html
+++ b/src/app/leyes/anexo18/anexo18.component.html
@@ -1,1 +1,57 @@
-<p>anexo18 works!</p>
+<div class="zona1"><br>
+    <hr style="height:3px; color: black; background-color: red;" />
+    <div id="cabezaLey">
+
+        <p id="titulo1">PODER EJECUTIVO</p>
+        <p id="titulo1">SECRETARIA DE HACIENDA Y CREDITO PUBLICO</p>
+        <p id="titulo2"> ANEXO 18 de las Reglas Generales de Comercio Exterior para 2024</p>
+        <p id="titulo2">Mercancías que no pueden ser objeto del régimen aduanero de depósito fiscal
+        </p>
+
+
+
+        <p>Para los efectos del artículo 123 de la Ley, en relación con la regla 4.5.9., se dan a conocer las mercancías
+            que no podrán ser objeto del régimen aduanero de depósito fiscal, señaladas a continuación:</p>
+
+
+
+
+    </div>
+
+    <ol type="I">
+
+        <li>Armas.</li>
+        <li>Municiones</li>
+        <li>Mercancías explosivas</li>
+        <li>Radioactivas</li>
+        <li>Radiactivas</li>
+        <li>Nucleares y contaminantes.</li>
+        <li>Precursores químicos y químicos esenciales.</li>
+        <li>Diamantes, brillantes, rubíes, zafiros, esmeraldas y perlas naturales o cultivadas o las manufacturas
+            de joyería hechas con metales preciosos o con las piedras o perlas mencionadas.</li>
+        <li>Relojes</li>
+        <li>Artículos de jade, coral, marfil y ámbar.</li>
+        <li>Las listadas en el Anexo 10, fracción I, sector 9 “Cigarros”.</li>
+        <li>. Las listadas en el Anexo 29.
+        </li>
+        <li>Las clasificadas en la partida 17.01 de la TIGIE.</li>
+        <li>Las clasificadas en los capítulos 50 a 64 de la TIGIE</li>
+        <li> Las clasificadas en las partidas 95.03 y 95.04 de la TIGIE, cuando sean introducidas por personas
+            físicas o morales residentes en el extranjero.</li>
+        <li>Los vehículos, excepto los clasificados en las fracciones arancelarias y en los NICO 8703.21.01 00,
+            8704.31.02 00 y 8704.51.02 00 y en la partida 87.11 de la TIGIE, así como los clasificados en las
+            fracciones arancelarias y NICO 8703.10.04 02, 8709.11.01 00, 8709.19.99 00, 8709.90.01 00,
+            8713.10.01 00, 8713.90.99 00, 8715.00.01 00 y 8715.00.02 00, siempre que las empresas que
+            introduzcan a depósito fiscal vehículos clasificados en estas últimas fracciones arancelarias,
+            cuenten con el registro en el esquema de certificación de empresas en cualquier modalidad.
+        </li>
+
+    </ol>
+    <br>
+    <p>Atentamente.</p>
+    <p>Ciudad de México, a 15 de diciembre de 2023.- En suplencia por ausencia del Jefe del Servicio de
+        Administración Tributaria, con fundamento en el artículo 4, primer párrafo del Reglamento Interior del Servicio
+        de Administración Tributaria, firma el Administrador General Jurídico, Lic. Ricardo Carrasco Varona.-
+        Rúbrica.</p>
+
+</div>
