--- a/src/app/leyes/anexo19/anexo19.component.html
+++ b/src/app/leyes/anexo19/anexo19.component.html
@@ -1,1 +1,81 @@
-<p>anexo19 works!</p>
+<div class="zona1">
+    <br>
+    <hr style="height:3px; color: black; background-color: red;" />
+    <div id="cabezaLey">
+       
+        <p id="titulo1">PODER EJECUTIVO</p>
+        <p id="titulo1">SECRETARIA DE HACIENDA Y CREDITO PUBLICO</p>
+        <p id="titulo2"> ANEXO 19 de las Reglas Generales de Comercio Exterior para 2024</p>
+        <p id="titulo2" >Datos inexactos, falsos u omitidos por los que se actualiza la infracción establecida en el artículo 184,
+            fracción III de la Ley
+        </p>
+        
+
+
+<p>Para los efectos de los artículos 184, fracción III y 185, fracción II de la Ley, en relación con la regla
+    3.7.25., segundo párrafo, se dan a conocer los datos inexactos, falsos u omitidos por los que se actualiza la
+    infracción establecida en el artículo 184, fracción III de la Ley, señalados a continuación:
+    </p>
+
+
+    
+
+    </div>
+
+
+<ol type="I">
+
+<li>Fecha de entrada de la mercancía a territorio nacional (importación).
+</li>
+<li>Clave del pedimento.
+</li>
+<li>Tipo de operación.
+</li>
+<li>Número de pedimento</li>
+<li>Clave en el RFC del importador/exportador.</li>
+<li>Clave del país vendedor o comprador.</li>
+<li>Clave del país de origen o del último destino.</li>
+<li>Clave del medio de transporte de entrada a territorio nacional.</li>
+<li>Fracción arancelaria.</li>
+<li>Clave de la unidad de medida conforme a la TIGIE.</li>
+<li>Cantidad de la mercancía en unidad de la TIGIE.
+</li>
+<li>Valor en aduana de la mercancía</li>
+<li>Importe de fletes.
+</li>
+<li>Importe de seguros.
+</li>
+<li>Importe de embalajes.
+</li>
+<li>Importe de otros incrementables</li>
+<li>Fecha de pago de los impuestos.</li>
+<li>Valor comercial de la mercancía</li>
+<li>Valor agregado en productos elaborados por empresas con Programa IMMEX</li>
+<li>Número de patente o de autorización de agente aduanal, agencia aduanal o de almacenadora.</li>
+<li>Permisos, autorización(es) e identificadores/claves</li>
+<li>Número o números de permisos, autorización(es) e identificadores/claves.</li>
+<li>Los números de serie, parte, marca o modelo siempre que los declarados sean distintos de los
+    que ostenten las mercancías en uno, dos o tres de sus caracteres alfanuméricos, o en su
+    defecto las especificaciones técnicas o comerciales necesarias para identificar las mercancías
+    individualmente y distinguirlas de otras similares, cuando dichos datos existan y no se
+    consignen en el pedimento, en el CFDI o documento equivalente, en el documento de
+    embarque o en relación que, en su caso, se haya anexado al pedimento.</li>
+<li>Número de contenedor.</li>
+<li>Clave del tipo de contenedor y tipo de vehículo de autotransporte.</li>
+<li>Depósito referenciado (línea de captura) y, en su caso, la impresión del pago electrónico
+    conforme al Anexo 22, apéndice 23.</li>
+<li>Código QR, verificador de pago o cumplimiento.</li>
+<li> INCOTERM.</li>
+<li>Decrementables, de conformidad con el artículo 66 de la Ley (transporte decrementables,
+    seguros decrementables, carga decrementables, descarga decrementables y otros
+    decrementables).</li>
+
+
+</ol>
+<br>
+<p>Atentamente.</p>
+<p>Ciudad de México, a 15 de diciembre de 2023.- En suplencia por ausencia del Jefe del Servicio de
+    Administración Tributaria, con fundamento en el artículo 4, primer párrafo del Reglamento Interior del Servicio
+    de Administración Tributaria, firma el Administrador General Jurídico, Lic. Ricardo Carrasco Varona.-
+    Rúbrica.</p>
+</div>
