--- a/src/app/leyes/anexo25/anexo25.component.html
+++ b/src/app/leyes/anexo25/anexo25.component.html
@@ -1,1 +1,109 @@
-<p>anexo25 works!</p>
+<div class="zona1">
+    <br>
+    <hr style="height:3px; color: black; background-color: red;" />
+    <div id="cabezaLey">
+
+        <p id="titulo1">PODER EJECUTIVO</p>
+        <p id="titulo1">SECRETARIA DE HACIENDA Y CREDITO PUBLICO</p>
+        <p id="titulo2"> ANEXO 25 de las Reglas Generales de Comercio Exterior para 2024</p>
+        <p id="titulo2">Puntos de revisión para la introducción de las mercancías procedentes de la franja o región
+            fronteriza
+            al resto del territorio nacional
+
+        </p>
+
+
+
+        <p>Para los efectos del artículo 140, primer párrafo, de la Ley, en relación con la regla 3.4.5., se dan a
+            conocer los puntos de revisión para la introducción de las mercancías procedentes de la franja o región
+            fronteriza al resto del territorio nacional, señalados a continuación:
+        </p>
+
+    </div>
+
+
+
+    <ol type="I">
+
+
+        <li>Aduana de La Paz:
+        </li>
+
+        <ol type="a">
+            <li>Garita Pichilingue, ubicada en el muelle de transbordadores s/n, kilómetro 17 de la
+                carretera federal número 11, en el tramo La Paz-Pichilingue, Municipio La Paz, Estado de
+                Baja California Sur.</li>
+            <li>Garita Santa Rosalía, ubicada en el kilómetro 0 de la carretera federal transpeninsular
+                número 1, en el tramo Santa Rosalía-Mulegé, Municipio de Mulegé, Estado de Baja
+                California Sur.</li>
+
+        </ol>
+        <br>
+        <li>Aduana de Sonoyta:</li>
+
+        <ol type="a">
+            <li>Garita San Emeterio, ubicada en el kilómetro 27 de la carretera federal número 2, en el
+                tramo Sonoyta-Caborca, en los límites del Municipio Gral. Plutarco Elías Calles y Caborca,
+                Estado de Sonora.</li>
+            <li>Garita Almejas, ubicada en el kilómetro 42 de la carretera estatal número 37, en el tramo
+                Peñasco-Caborca, Municipio de Puerto Peñasco, Estado de Sonora.</li>
+
+        </ol>
+        <br>
+        <li>Aduana de Ciudad Reynosa:</li>
+        <ol type="a">
+            <li>Garita Anzaldúas, ubicada en el Puente Internacional Anzaldúas, del Libramiento Sur
+                entronque desnivel kilómetro 6+420, avenida La Florida, Parque Industrial Villa Florida,
+                Ciudad Reynosa Tamaulipas.</li>
+        </ol>
+        <br>
+        <li>Aduana de Ciudad Camargo:
+        </li>
+        <ol type="a">
+            <li>Garita El Vado, ubicado en el cruce internacional en la Ciudad Gustavo Díaz Ordaz,
+                Municipio Gustavo Díaz Ordaz, Estado de Tamaulipas.
+            </li>
+        </ol>
+        <br>
+        <li>Aduana de Ciudad Hidalgo:</li>
+        <ol type="a">
+            <li>Garita El Garitón, ubicada en el kilómetro 1360 de la carretera federal panamericana 190,
+                límite internacional México-Guatemala, Municipio de Frontera Comalapa, Estado de
+                Chiapas.</li>
+            <li>Garita El Carmen Xhan, ubicada en el poblado del Carmen Xhan, límite internacional
+                México-Guatemala, Municipio de la Trinitaria, Estado de Chiapas.</li>
+            <li>Huixtla, ubicada en la carretera federal 200 Huixtla-Lázaro Cárdenas kilómetro 8.5,
+                Municipio de Huixtla, Chiapas.</li>
+            <li> Comitán-Trinitaria, ubicada en el kilómetro 185 de la carretera federal 190, Comitán-Ciudad
+                Cuauhtémoc, Municipio de la Trinitaria, Chiapas.</li>
+            <li>Nuevo Orizaba-Ingenieros, ubicada sobre la carretera federal 198, en la Localidad de
+                Nuevo Orizaba en el Municipio de Benemérito de las Américas, Estado de Chiapas, línea
+                fronteriza con Guatemala.</li>
+        </ol>
+        <br>
+
+        <li>Aduana de Tijuana:</li>
+        <ol type="a">
+            <li>El Chaparral, ubicada en José María Larroque s/n, colonia Federal, Delegación Coahuila,
+                código postal 22430, entre las calles Francisco Cuevas y Canalización, Tijuana, Baja
+                California.</li>
+            <li>Puerta México Este, ubicada en Rampa Xicoténcatl s/n, colonia Cuauhtémoc, Delegación
+                Centro, código postal 22320, línea fronteriza, Tijuana, Baja California.</li>
+        </ol>
+        <br>
+
+        <li>Aduana de Dos Bocas:</li>
+        <ol type="a">
+            <li>Catazajá, ubicada en el entronque carretero de la carretera federal 199 Catazajá-Palenque y
+                la carretera federal 186 Chetumal-Villahermosa, Municipio de Catazajá, Estado de Chiapas.</li>
+        </ol>
+
+    </ol>
+
+    <br>
+    <p>Atentamente.</p>
+    <p>Ciudad de México, a 15 de diciembre de 2023.- En suplencia por ausencia del Jefe del Servicio de
+        Administración Tributaria, con fundamento en el artículo 4, primer párrafo del Reglamento Interior del Servicio
+        de Administración Tributaria, firma el Administrador General Jurídico, Lic. Ricardo Carrasco Varona.-
+        Rúbrica.</p>
+</div>
