--- a/src/app/leyes/anexo26/anexo26.component.html
+++ b/src/app/leyes/anexo26/anexo26.component.html
@@ -1,1 +1,303 @@
-<p>anexo26 works!</p>
+<div class="zona1">
+    <br>
+    <hr style="height:3px; color: black; background-color: red;" />
+    <div id="cabezaLey">
+
+        <p id="titulo1">PODER EJECUTIVO</p>
+        <p id="titulo1">SECRETARIA DE HACIENDA Y CREDITO PUBLICO</p>
+        <p id="titulo2"> ANEXO 26 de las Reglas Generales de Comercio Exterior para 2024</p>
+        <p id="titulo2">Datos omitidos o inexactos relativos al cumplimiento de las NOM de información comercial por los
+            que procede la retención de mercancías
+
+        </p>
+
+
+
+        <p>Para los efectos del artículo 158, primer párrafo, fracción II de la Ley, en relación con la regla 3.7.20.,
+            se
+            dan a conocer los datos omitidos o inexactos relativos al cumplimiento de las NOM de información comercial
+            por los que procede la retención de mercancías, señalados a continuación:
+        </p>
+
+    </div>
+
+    <br>
+    <div id="contenedor_tablas">
+
+
+        <table width="100%" border="1" align="center" cellpadding="2" cellspacing="0" style="border-collapse:collapse"
+            bordercolor="#000000">
+
+            <tr>
+
+                <th width="50%">Norma Oficial Mexicana</th>
+                <th width="50%">Datos omitidos o inexactos en la etiqueta
+                    comercial de las mercancías
+                </th>
+
+            </tr>
+
+            <table width="100%" border="1" align="center" cellpadding="2" cellspacing="0"
+                style="border-collapse:collapse" bordercolor="#000000">
+
+
+
+                <tr>
+                    <td width="3%" rowspan="2">I</td>
+                </tr>
+
+                <tr>
+                    <td>NOM-004-SE-2021.
+                        <p>Información comercial-Etiquetado de productos textiles,
+                            prendas de vestir, sus accesorios y ropa de casa,
+                            publicada en el DOF el 14 de enero de 2022.</p>
+                    </td>
+                    <td>Inciso 4.1 (Información comercial), excepto lo
+                        establecido en los incisos 4.1.1, literal (f) y 4.1.2, literal
+                        (c), relativos al responsable del producto.</td>
+
+
+                </tr>
+
+
+
+
+                <tr>
+                    <td rowspan="2">II.</td>
+                </tr>
+
+                <tr align="center">
+                    <td>NOM-020-SCFI-1997.
+
+                        <p>Información comercial-Etiquetado de cueros y pieles
+                            curtidas naturales y materiales sintéticos o artificiales con
+                            esa apariencia, calzado, marroquinería, así como los
+                            productos elaborados con dichos materiales, publicada en
+                            el DOF el 27 de abril de 1998.</p>
+                    </td>
+
+
+                    <td>Capítulo 4 (Información comercial).
+                    </td>
+
+                </tr>
+
+
+
+                <tr>
+                    <td rowspan="2">III. </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        NOM-024-SCFI-2013.
+                        <p>Información comercial para empaques, instructivos y
+                            garantías de los productos electrónicos, eléctricos y
+                            electrodomésticos, publicada en el DOF el 12 de agosto
+                            de 2013</p>
+                    </td>
+
+
+                    <td>Capítulo 5 (Información comercial).</td>
+
+                </tr>
+
+
+                <tr>
+                    <td rowspan="2">IV. </td>
+                </tr>
+
+                <tr>
+                    <td>NOM-139-SCFI-2012
+
+                        <p>Información comercial-Etiquetado de extracto natural de
+                            vainilla (Vanilla spp), derivados y sustitutos, publicada en
+                            el DOF el 10 de julio de 2012 y sus posteriores
+                            modificaciones.</p>
+                    </td>
+
+
+                    <td>Capítulo 6 (Información comercial).
+                    </td>
+
+                </tr>
+
+
+                <tr>
+                    <td rowspan="2">V. </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        NOM-055-SCFI-1994
+                        <p>Información comercial - Materiales retardantes y/o
+                            inhibidores de flama y/o ignífugos - Etiquetado, publicada
+                            en el DOF el 08 de diciembre de 1994.</p>
+                    </td>
+
+
+                    <td>Capítulo 4 (Marcado y etiquetado).</td>
+
+                </tr>
+
+
+                <tr>
+                    <td rowspan="2">VI.</td>
+                </tr>
+
+                <tr>
+                    <td>
+                        NOM-003-SSA1-2006.
+                        <p>Salud ambiental. Requisitos sanitarios que debe satisfacer
+                            el etiquetado de pinturas, tintas, barnices, lacas y
+                            esmaltes, publicada en el DOF el 04 de agosto de 2008 y
+                            sus posteriores modificaciones</p>
+                    </td>
+
+
+                    <td>Capítulo 5 (Especificaciones).</td>
+
+                </tr>
+
+
+                <tr>
+                    <td rowspan="2">VII.</td>
+                </tr>
+
+                <tr>
+                    <td>
+                        NOM-235-SE-2020
+                        <p>Atún y bonita preenvasados- DenominaciónEspecificaciones-Información comercial y métodos de
+                            prueba, publicada en el DOF el 18 de septiembre de
+                            2020.</p>
+                    </td>
+
+
+                    <td>Capítulo 5 (Información comercial).</td>
+
+                </tr>
+
+
+
+                <tr>
+                    <td rowspan="2">VIII.</td>
+                </tr>
+
+                <tr>
+                    <td>
+                        NOM-051-SCFI/SSA1-2010.
+                        <p>Especificaciones generales de etiquetado para alimentos
+                            y bebidas no alcohólicas preenvasados-Información
+                            comercial y sanitaria, publicada en el DOF el 05 de abril
+                            de 2010 y sus posteriores modificaciones.</p>
+                    </td>
+
+
+                    <td>Capítulo 4 (Especificaciones), excepto lo establecido
+                        en el inciso 4.2.8 relativo a la información nutrimental</td>
+
+                </tr>
+
+
+                <tr>
+                    <td rowspan="2">IX</td>
+                </tr>
+
+                <tr>
+                    <td>
+                        NOM-050-SCFI-2004.
+                        <p>Información comercial–Etiquetado general de productos,
+                            publicada en el DOF el 01 de junio de 2004.</p>
+                    </td>
+
+
+                    <td>Incisos 5.1 y 5.2 del Capítulo 5 (Información
+                        comercial), excepto lo establecido en el inciso 5.2.1.,
+                        literal (f), relativo a los instructivos o manuales de
+                        operación</td>
+
+                </tr>
+
+
+
+                <tr>
+                    <td rowspan="2">X.</td>
+                </tr>
+
+                <tr>
+                    <td>
+                        NOM-142-SSA1/SCFI-2014.
+                        <p>Bebidas alcohólicas. Especificaciones sanitarias.
+                            Etiquetado sanitario y comercial, publicada en el DOF el
+                            23 de marzo de 2015</p>
+                    </td>
+
+
+                    <td>Capítulo 9 (Etiquetado)</td>
+
+                </tr>
+
+
+                <tr>
+                    <td rowspan="2">XI.</td>
+                </tr>
+
+                <tr>
+                    <td>
+                        NOM-015-SCFI-2007.
+                        <p>Información comercial-Etiquetado para juguetes,
+                            publicada en el DOF el 17 de abril de 2008.</p>
+                    </td>
+
+
+                    <td>Capítulo 5 (Especificaciones de información
+                        comercial), excepto lo establecido en los incisos 5.1.1
+                        y 5.1.2, literal (c), relativo al nombre, denominación o
+                        razón social y domicilio del fabricante o responsable de
+                        la fabricación.
+                    </td>
+
+                </tr>
+
+
+                <tr>
+                    <td rowspan="2">XII.</td>
+                </tr>
+
+                <tr>
+                    <td>
+                        NOM-141-SSA1/SCFI 2012.
+                        <p>Etiquetado para productos cosméticos preenvasados.
+                            Etiquetado sanitario y comercial, publicada en el DOF el
+                            19 de septiembre de 2012 y sus posteriores
+                            modificaciones.
+                        </p>
+                    </td>
+
+
+                    <td>Capítulo 5 (requisitos de etiquetado), excepto lo
+                        establecido en el inciso 5.1.6.1, relativo al nombre,
+                        denominación o razón social y domicilio fiscal del
+                        productor o responsable de la fabricación, y al
+                        importador.
+                    </td>
+
+                </tr>
+
+
+            </table>
+        </table>
+
+        <br>
+        <P>Nota: Los datos a que se refiere este Anexo deben presentarse en idioma español; en caso contrario, se
+            considerará incumplimiento sancionable en los términos de la Ley.</P>
+        <br>
+        <P>Atentamente</P>
+        <P>Ciudad de México, a 15 de diciembre de 2023.- En suplencia por ausencia del Jefe del Servicio de
+            Administración Tributaria, con fundamento en el artículo 4, primer párrafo del Reglamento Interior del
+            Servicio
+            de Administración Tributaria, firma el Administrador General Jurídico, Lic. Ricardo Carrasco Varona.-
+            Rúbrica</P>
+
+    </div>
+</div>
