--- a/src/app/leyes/anexo29/anexo29.component.html
+++ b/src/app/leyes/anexo29/anexo29.component.html
@@ -1,1 +1,267 @@
-<p>anexo29 works!</p>
+<div class="zona1">
+    
+
+ <br>
+ <hr style="height:3px; color: black; background-color: red;" />
+ <div id="cabezaLey">
+    
+     <p id="titulo1">PODER EJECUTIVO</p>
+     <p id="titulo1">SECRETARIA DE HACIENDA Y CREDITO PUBLICO</p>
+     <p id="titulo2"> ANEXO 29 de las Reglas Generales de Comercio Exterior para 2024</p>
+     <p id="titulo2" >Mercancías que no pueden destinarse a los regímenes: temporal de importación para elaboración,
+         transformación o reparación en programas de maquila o de exportación; de depósito fiscal; de
+         elaboración, transformación o reparación en recinto fiscalizado y de recinto fiscalizado estratégico
+     </p>
+     
+
+
+<p>Para los efectos de los artículos 108, sexto párrafo, 123, 135, décimo párrafo y 135-B, cuarto párrafo de la
+ Ley, en relación con las reglas 4.3.4., 4.5.9., 4.7.2. y 4.8.4., se dan a conocer las mercancías que no pueden
+ destinarse a los regímenes: temporal de importación para elaboración, transformación o reparación en
+ programas de maquila o de exportación; de depósito fiscal; de elaboración, transformación o reparación en
+ recinto fiscalizado y de recinto fiscalizado estratégico, señaladas a continuación:
+ </p>
+
+
+  
+
+ </div>
+
+
+<div id="contenedor_tablas">
+        
+         
+     <table width="100%" border="1" align="center" cellpadding="2" cellspacing="0" style="border-collapse:collapse"
+                     bordercolor="#000000">
+     
+     <tr>
+         
+        <th  width="20%">Fracción
+         arancelaria y NICO</th>
+        <th width="60%">Descripción</th>
+        <th width="20%">Acotación</th>
+     </tr>
+
+<tr>
+
+<td>2710.12.99</td>
+<td>Los demás.
+</td>
+<td></td>
+
+</tr>
+
+<tr>
+
+<td>01 </td>
+<td>Aceites minerales puros del petróleo, en carro-tanque, buque-tanque o
+ auto-tanque.</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>03</td>
+<td> Gasolina para aviones.</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>04</td>
+<td>Gasolina con octanaje inferior a 87.
+</td>
+<td></td>
+
+</tr>
+
+<tr>
+
+<td>05</td>
+<td>Gasolina con octanaje superior o igual a 87 pero inferior a 92.
+</td>
+<td></td>
+
+</tr>
+
+<tr>
+
+<td>06 </td>
+<td> Gasolina con octanaje superior o igual a 92 pero inferior a 95.</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>91</td>
+<td> Las demás gasolinas.</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>99</td>
+<td>Los demás.</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>2710.19.99 </td>
+<td>Los demás.</td>
+<td></td>
+
+</tr>
+
+<tr>
+
+<td>03</td>
+<td>Aceite diésel (gasóleo) y sus mezclas, con contenido de azufre inferior o
+ igual a 15 ppm.</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>04</td>
+<td>Aceite diésel (gasóleo) y sus mezclas, con contenido de azufre inferior o
+ igual a 15 ppm.</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>05</td>
+<td>Fueloil (combustóleo).</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>08</td>
+<td>Turbosina, keroseno (petróleo lampante) y sus mezclas</td>
+<td></td>
+
+</tr>
+
+<tr>
+
+<td>91</td>
+<td>Los demás aceites diéseles (gasóleos) y sus mezclas.</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>2710.20.01</td>
+<td>Aceites de petróleo o de mineral bituminoso (excepto los aceites
+ crudos) y preparaciones no expresadas ni comprendidas en otra
+ parte, con un contenido de aceites de petróleo o de mineral
+ bituminoso superior o igual al 70% en peso, en las que estos
+ aceites constituyan el elemento base, que contengan biodiésel,
+ excepto los desechos de aceites.</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>00</td>
+<td>Aceites de petróleo o de mineral bituminoso (excepto los aceites crudos)
+ y preparaciones no expresadas ni comprendidas en otra parte, con un
+ contenido de aceites de petróleo o de mineral bituminoso superior o
+ igual al 70% en peso, en las que estos aceites constituyan el elemento
+ base, que contengan biodiésel, excepto los desechos de aceites.</td>
+<td></td>
+
+</tr>
+
+<tr>
+
+<td>2711.12.01</td>
+<td>Propano.</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>00</td>
+<td>Propano.</td>
+<td></td>
+
+</tr>
+
+<tr>
+
+<td>2711.19.01 </td>
+<td>Butano y propano, mezclados entre sí, licuados</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>00</td>
+<td>Butano y propano, mezclados entre sí, licuados</td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>3826.00.01</td>
+<td>Biodiésel y sus mezclas, sin aceites de petróleo o de mineral
+ bituminoso o con un contenido inferior al 70% en peso de estos
+ aceites.
+ </td>
+<td></td>
+
+</tr>
+
+
+<tr>
+
+<td>00</td>
+<td>Biodiésel y sus mezclas, sin aceites de petróleo o de mineral
+ bituminoso o con un contenido inferior al 70% en peso de estos
+ aceites.
+ </td>
+<td></td>
+
+</tr>
+
+     </table>
+
+<p>Atentamente</p>
+<p>Ciudad de México, a 15 de diciembre de 2023.- En suplencia por ausencia del Jefe del Servicio de
+ Administración Tributaria, con fundamento en el artículo 4, primer párrafo del Reglamento Interior del Servicio
+ de Administración Tributaria, firma el Administrador General Jurídico, Lic. Ricardo Carrasco Varona.-
+ Rúbrica.</p>
+
+
+
+
+</div>
