--- a/src/app/leyes/anexo30/anexo30.component.html
+++ b/src/app/leyes/anexo30/anexo30.component.html
@@ -1,1 +1,261 @@
-<p>anexo30 works!</p>
+<div class="zona1">
+
+    <br>
+    <hr style="height:3px; color: black; background-color: red;" />
+    <div id="cabezaLey">
+
+        <p id="titulo1">PODER EJECUTIVO</p>
+        <p id="titulo1">SECRETARIA DE HACIENDA Y CREDITO PUBLICO</p>
+        <p id="titulo2"> ANEXO 30 de las Reglas Generales de Comercio Exterior para 2024</p>
+        <p id="titulo2">Sistema de Control de Cuentas de Créditos y Garantías (SCCCyG)
+
+
+        </p>
+
+
+
+        <p>Para los efectos de los artículos 28-A, primer párrafo de la Ley del IVA y 15-A, primer párrafo de la Ley del
+            IEPS, se da a conocer el SCCCyG, el cual deberá contener lo siguiente:
+        </p>
+
+    </div>
+
+
+
+
+
+    <p>El SCCCyG administrará y controlará los créditos fiscales y los montos garantizados derivados de las
+        operaciones de importación temporal sujetas a los beneficios de las certificaciones en materia de IVA e IEPS;
+        del registro en el esquema de certificación de empresas, modalidad IVA e IEPS; o de las operaciones
+        garantizadas, a partir de:</p>
+
+
+
+
+    <ol type="I">
+        <li>El inventario existente o inventario inicial de las operaciones que, a la fecha de entrada en vigor de
+            las certificaciones en materia de IVA e IEPS, del registro en el esquema de certificación de
+            empresas modalidad IVA e IEPS, o de la aceptación para operar el esquema de garantías, se
+            encuentren pendientes de retorno al extranjero, enajenación, cambios de régimen o regularización:
+        </li>
+
+        <ol type="a">
+
+            <li>El contribuyente transmitirá de forma electrónica, el inventario existente de aquellas
+                operaciones que se encuentren bajo el régimen que tenga autorizado, al día inmediato
+                anterior a la entrada en vigor de la certificación en materia de IVA e IEPS, del registro en el
+                esquema de certificación de empresas modalidad IVA e IEPS, o de la aceptación para
+                operar el esquema de garantías, según corresponda, en un plazo máximo de treinta días
+                naturales posteriores a dicha fecha, a fin de que el mismo refleje el estatus de “Válido”,
+                conforme a la regla 7.2.1., segundo párrafo, fracción IV, tercer párrafo.</li>
+            <li>El inventario existente o inicial deberá transmitirse aun cuando no se hayan realizado
+                operaciones bajo el régimen que se tenga autorizado, reportando en ceros, de conformidad
+                con el «Manual técnico para la integración de archivos “.txt” de Inventario Inicial e Informes
+                de Descargo para el Sistema de Control de Cuentas de Créditos y Garantías», que al efecto
+                se publique en el Portal del SAT.</li>
+            <li>El inventario existente o inicial se conforma de todos aquellos activos fijos e insumos
+                importados previos a la fecha de entrada en vigor de la certificación en materia de IVA e
+                IEPS, registro en el esquema de certificación de empresas modalidad IVA e IEPS, o del
+                esquema de garantías.</li>
+            <p>En caso de requerir una corrección adicional fuera del plazo señalado en los incisos a) y d)
+                de la presente fracción, deberá solicitar la misma mediante escrito libre, ante la AGACE,
+                siempre y cuando el registro en el esquema de certificación de empresas, modalidad IVA e
+                IEPS, se encuentre vigente.</p>
+            <li>El contribuyente transmitirá el inventario a nivel pedimento y fracción arancelaria de las
+                operaciones que a la fecha se encuentren pendientes de descargo o retorno,
+                proporcionando la siguiente información:
+            </li>
+
+            <ol type="1">
+                <li>Número de pedimento: la clave de aduana/sección de despacho, patente y número
+                    de documento.</li>
+                <li>Fecha del pedimento: la fecha de pago del pedimento</li>
+                <li>Fracción arancelaria: la fracción arancelaria reportada deberá coincidir con la
+                    asignada al momento de la importación temporal.</li>
+                <li>Valor comercial: el valor comercial declarado de las fracciones arancelarias
+                    asociadas a los pedimentos de importación que a la fecha se encuentren destinadas
+                    al régimen aduanero afecto, pendientes de descargo o retorno</li>
+            </ol>
+
+        </ol>
+
+
+
+        <li>Las operaciones que se realicen aplicando el crédito fiscal o garantía para el pago del IVA o IEPS
+            al amparo de las disposiciones y beneficios establecidos en las RGCE vigentes al momento de su
+            certificación en materia de IVA e IEPS o del registro en el esquema de certificación de empresas
+            modalidad IVA e IEPS:</li>
+
+        <ol type="a">
+            <li>La determinación de los créditos fiscales o montos garantizados, de conformidad con los
+                artículos 28-A de la Ley del IVA y 15-A de la Ley del IEPS, se efectuará bajo los siguientes
+                criterios:</li>
+            <ol type="1">
+                <li>El SCCCyG incorporará automáticamente los montos de IVA e IEPS declarados por
+                    los contribuyentes en los pedimentos correspondientes registrados en el SAAI.</li>
+                <li>El monto de IVA e IEPS, para fines del control de los créditos y garantías, se
+                    realizará de forma automática por fracción arancelaria, conforme a las formas de
+                    pago 21 y 22, establecidas en el apéndice 13, contenido en el Anexo 22</li>
+                <li> Tratándose de operaciones de activo fijo, los créditos o montos garantizados serán
+                    aquellos asociados a las claves de pedimento “AF”, “BO” y “M4”, y/o identificador
+                    “AF” especificados en los apéndices 2 y 8 contenidos en el Anexo 22.</li>
+                <li>Las rectificaciones a los pedimentos de importación de las operaciones destinadas al
+                    régimen aduanero afecto asociados a los créditos y las garantías serán reflejadas en
+                    automático dentro del SCCCyG</li>
+            </ol>
+
+
+        </ol>
+
+
+        <li>. Los informes de descargo asociados a los pedimentos de retorno, cambios de régimen,
+            transferencias virtuales, extracciones, regularizaciones de mercancías, los apartados B y C de las
+            constancias de transferencia de mercancía o, en su caso, los comprobantes fiscales que amparen
+            la enajenación de las mercancías a las empresas de la industria automotriz terminal o
+            manufacturera de vehículos de autotransporte a que se refiere la regla 7.3.1., fracción V, así como
+            a los avisos de donación y destrucción:
+        </li>
+
+        <ol type="a">
+            <li>Los contribuyentes podrán transmitir mensualmente y/o bimestralmente de forma electrónica
+                los informes de descargo, dentro del mes calendario siguiente al asociado al cierre de las
+                operaciones realizadas por cada uno de los tipos de destinos aduaneros a descargar
+                mencionados en el presente Anexo.</li>
+            <li> Los contribuyentes podrán transmitir el informe de descargo a partir de la entrada en vigor
+                de la certificación en materia de IVA e IEPS, o del registro en el esquema de certificación de
+                empresas modalidad IVA e IEPS, o de la aceptación del esquema de garantías.</li>
+
+            <li> El informe de descargo asociado a cada uno de los destinos aduaneros a descargar deberá
+                contener la siguiente información:</li>
+
+            <ol type="1">
+                <li>Tipo de destino aduanero a descargar: retorno, cambios de régimen, transferencias
+                    virtuales, extracciones, constancia de transferencia de mercancías, comprobantes
+                    fiscales a que se refiere la regla 7.3.1., fracción V, avisos de destrucción o donación.</li>
+                <li>Periodo que se descarga: señalar el mes y año asociado a la fecha de cierre de las
+                    operaciones realizadas en el destino aduanero a descargar. Se entenderán como
+                    fechas de cierre las siguientes:</li>
+
+                <ol type="i">
+                    <li>Fecha de pago para los pedimentos de retorno, cambio de régimen,
+                        transferencia virtual o extracción</li>
+                    <li>Fecha de expedición para la constancia de transferencia de mercancías o, en
+                        su caso, fecha de emisión para el comprobante fiscal a que se refiere la regla
+                        7.3.1., fracción V.</li>
+                    <li>Fecha de acuse de recibo para el aviso de destrucción y donación.</li>
+                </ol>
+
+
+                <li> Números de pedimentos: (clave de aduana/sección de despacho, patente y número
+                    de documento) asociados al tipo descargo o folio de registro de las constancias de
+                    transferencia de mercancías o, en su caso, el folio fiscal del comprobante fiscal a que
+                    se refiere la regla 7.3.1., fracción V, y folio de registro de los avisos de destrucción o
+                    donación que serán descargados.</li>
+
+
+
+                <li>Fracción arancelaria: por cada tipo de descargo se podrán reportar las fracciones
+                    arancelarias declaradas en el pedimento con la cual ingresó la mercancía al régimen
+                    aduanero afecto asociadas a la fracción I del presente Anexo, así como aquellas
+                    fracciones arancelarias declaradas en los pedimentos con formas de pago 21 y 22,
+                    establecidas en el apéndice 13 del Anexo 22, que fueron consumidas en el destino
+                    aduanero a descargar. En aquellos casos en donde la clave de documento no
+                    permite identificar el activo fijo, se podrá identificar el mismo señalando por separado
+                    las fracciones arancelarias asignadas al momento de la importación</li>
+
+                <li>Valor comercial: sumatoria del valor comercial que se descarga por fracción
+                    arancelaria asociado a los pedimentos de importación de las operaciones realizadas
+                    dentro del periodo que se descarga.</li>
+
+            </ol>
+
+            <li>Lo anterior, no será aplicable para las operaciones cuyo vencimiento de plazo de retorno
+                este dentro del periodo que se descarga</li>
+
+            <li>Los contribuyentes que operen bajo el esquema de garantías podrán transmitir dentro de
+                periodos quincenales los informes de descargo. Dichos informes de descargo deben tener
+                estatus de “Válido”, con el fin de que la información sea actualizada de acuerdo a la
+                mecánica de cargos y descargos del presente Anexo. El proceso de aplicación de
+                revolvencia de los saldos se aplicará de manera quincenal de acuerdo a la mecánica antes
+                mencionada</li>
+            <li>El contribuyente deberá presentar correcciones a los informes de descargo originales
+                cuando hayan ocurrido rectificaciones asociadas a los retornos, cambios de régimen,
+                transferencias virtuales, extracciones, regularizaciones, constancias de transferencia de
+                mercancías, comprobantes fiscales a que se refiere la regla 7.3.1., fracción V, avisos de
+                destrucción o donación y se encuentren dentro del plazo de retorno correspondiente,
+                conforme a los campos señalados en el presente Anexo.</li>
+            <li>Adicionalmente, se podrán presentar correcciones derivadas de errores de llenado de los
+                informes de descargo.
+            </li>
+            <li>En ambos tipos de corrección, los informes de descargo presentados por el contribuyente
+                sustituirán por completo al informe previamente presentado.
+            </li>
+            <li>Las empresas que opten por garantizar el interés fiscal de conformidad con la regla 7.4.1.,
+                deberán transmitir únicamente los informes de descargo relacionados a los cargos
+                asociados a los montos garantizados</li>
+
+        </ol>
+
+        <li>Se deberán presentar los informes de descargo asociados a los pedimentos de regularización y/o
+            cambios de régimen de mercancías que hubieran ingresado a territorio nacional por cualquier de
+            los regímenes aduaneros afectos:</li>
+
+
+        <ol type="a">
+            <li>Los contribuyentes que hayan realizado pedimentos de regularización y/o cambios de
+                régimen de mercancías que hubieran ingresado a territorio nacional bajo los distintos
+                regímenes aduaneros al que se encuentran sujetas, deberán transmitir el informe de
+                descargo asociado a dichos pedimentos, de conformidad con lo señalado para el informe de
+                descargos establecido en la fracción III, incisos (a) y (c) del presente Anexo.</li>
+
+
+
+        </ol>
+
+
+
+        <li> La mecánica de cargos y descargos del SCCCyG:</li>
+
+
+        <ol type="a">
+            <li> La autoridad realizará la mecánica de cargos y descargos dentro del SCCCyG bajo los
+                siguientes términos:</li>
+            <ol type="1">
+                <li> Los cargos asociados a los créditos fiscales y montos garantizados serán
+                    incorporados al SCCCyG de forma automática. Respecto a los informes de descargo,
+                    se aplicarán en el SCCCyG de manera quincenal.</li>
+                <li>El SCCCyG determina los plazos de retorno de forma presuntiva más no indicativa,
+                    por lo que los contribuyentes deberán computar los plazos conforme a las
+                    disposiciones legales vigentes</li>
+                <li>Los descargos se aplicarán considerando las fracciones arancelarias reportadas en
+                    las cuentas de cargo, utilizando el método de control de inventarios PEPS conforme a
+                    las disposiciones jurídicas vigentes.</li>
+                <li>El SCCCyG determinará el saldo del crédito global o el monto garantizado total de
+                    forma quincenal, conforme a lo establecido en los puntos anteriores</li>
+            </ol>
+
+        </ol>
+
+        <p>Los saldos reflejados dentro del SCCCyG no implican resolución definitiva, quedando a salvo las
+            facultades de comprobación de la autoridad.</p>
+        <p>Tratándose de contribuyentes que introduzcan bienes a depósito fiscal para someterse al proceso de
+            ensamble y fabricación de vehículos podrán operar con los lineamientos que para tales efectos emita el SAT.
+        </p>
+        <p>Se deberá estar a lo señalado por el “Manual de operación para la transmisión de inventario inicial e
+            informes de descargos del Sistema de Control de Cuentas de Créditos y Garantías” y en el «Manual técnico</p>
+        <p>para la integración de archivos “.txt” de Inventario Inicial e Informes de Descargo para el Sistema de
+            Control
+            de Cuentas de Créditos y Garantías», los cuales se encuentran publicados en el Portal del SAT.
+        </p>
+        <p>Atentamente.
+        </p>
+        <p>Ciudad de México, a 15 de diciembre de 2023.- En suplencia por ausencia del Jefe del Servicio de
+            Administración Tributaria, con fundamento en el artículo 4, primer párrafo del Reglamento Interior del
+            Servicio
+            de Administración Tributaria, firma el Administrador General Jurídico, Lic. Ricardo Carrasco Varona.-
+            Rúbrica.</p>
+
+</ol>
+
+
+</div>
