--- a/src/app/leyes/anexo13/anexo13.component.html
+++ b/src/app/leyes/anexo13/anexo13.component.html
@@ -1,4 +1,5 @@
-<div class="zona1"><br>
+<div class="zona1">
+    <br>
     <hr style="height:3px; color: black; background-color: red;" />
     <div id="cabezaLey">
        
